Throw the rest of the copy in.

--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -32,3 +32,27 @@
           %em should I keept going?
 
       .row.examples
+        .span3
+          %h4 We do things like:
+          %ul
+            %li wireframes
+            %li landing pages
+            %li working websites
+            %li customer interviews
+            %li solution interviews
+
+        .span3
+          %h4 To help you:
+          %ul
+            %li raise money
+            %li understand your customers
+            %li test markets
+            %li do other things
+            %li something else
+
+      .row.contact-us
+        %h4 5 days. $10k.
+        %p
+          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
+        %a{ href: 'mailto:hello@fivedayprototype.com'}
+          %button.btn.btn-primary.span3.offset3 Get In Touch
