--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,38 @@
 .page-header {
   text-align: center; }
 .page-header .hero-unit {
-  background-color: transparent; }
+  background-color: transparent;
+  padding: 30px; }
 
 .row {
-  margin: 10px auto;
+  margin: 1px auto;
   width: 720px;
   padding: 30px;
-  box-shadow: 0px 0px 10px -1px #5c8ae6; }
-.row .span3 {
+  border: 2px solid #dee7f5;
+  box-shadow: inset 0 0 1px 1px #dee7f5; }
+
+h4 {
+  text-align: center;
+  margin-bottom: 20px; }
+
+.summary .span3 {
   text-align: center; }
-.row .span3 .circle {
+.summary .span3 .circle {
   margin: 20px auto;
   width: 120px;
   height: 120px;
   background: #5888cd;
   border-radius: 50%; }
+
+.examples {
+  padding-top: 50px; }
+.examples .span3:first-child {
+  margin-left: 80px; }
+.examples .span3 {
+  background-color: #dee7f5;
+  padding: 20px 10px 20px 20px;
+  margin-left: 40px; }
+
+.contact-us button {
+  text-align: center;
+  margin-top: 20px; }
