Fix page-header styling and 'Get In Touch' button/link styling.

--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -55,4 +55,4 @@
         %p
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
         %a{ href: 'mailto:hello@fivedayprototype.com'}
-          %button.btn.btn-primary.span3.offset3 Get In Touch
+          .span3 Get In Touch
