--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,12 @@
+body {
+  margin-bottom: 100px; }
+
 .page-header {
-  text-align: center; }
+  text-align: center;
+  border-bottom: none; }
 .page-header .hero-unit {
   background-color: transparent;
-  padding: 30px; }
+  padding: 20px; }
 
 .row {
   margin: 1px auto;
@@ -33,6 +37,11 @@ h4 {
   padding: 20px 10px 20px 20px;
   margin-left: 40px; }
 
-.contact-us button {
+.contact-us a div {
+  padding: 10px 20px;
+  margin: 30px 0 0 240px;
   text-align: center;
-  margin-top: 20px; }
+  font-size: 20px;
+  line-height: 24px;
+  color: white;
+  background-color: #5888cd; }
