--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -1,12 +1,16 @@
 $darkBlue: #5888CD
 $lightBlue: #DEE7F5
 
+body
+  margin-bottom: 100px
+
 .page-header
   text-align: center
+  border-bottom: none
 
   .hero-unit
     background-color: transparent
-    padding: 30px
+    padding: 20px
 
 .row
   margin: 1px auto
@@ -42,6 +46,13 @@ h4
     margin-left: 40px
 
 .contact-us
-  button
-    text-align: center
-    margin-top: 20px
+
+  a
+    div
+      padding: 10px 20px
+      margin: 30px 0 0 240px
+      text-align: center
+      font-size: 20px
+      line-height: 24px
+      color: white
+      background-color: $darkBlue
