--- a/static/style.css
+++ b/static/style.css
@@ -12,8 +12,8 @@ body {
   margin: 1px auto;
   width: 720px;
   padding: 30px;
-  border: 2px solid #dee7f5;
-  box-shadow: inset 0 0 1px 1px #dee7f5; }
+  border: 1px solid #dee7f5;
+  box-shadow: inset 0 0 5px 0 #dee7f5; }
 
 h4 {
   text-align: center;
