--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -16,8 +16,8 @@ body
   margin: 1px auto
   width: 720px
   padding: 30px
-  border: 2px solid $lightBlue
-  box-shadow: inset 0 0 1px 1px $lightBlue
+  border: 1px solid $lightBlue
+  box-shadow: inset 0 0 5px 0 $lightBlue
 
 h4
   text-align: center
