Add proxima nova and icons to page.

--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -15,21 +15,23 @@
       .row.summary
         .span3
           .circle
+            %img{ src: 'images/icon.bulb.png' }
           %h4 Your idea...
           %p
             You have an idea. Something that makes money or makes the world a better place. (Ideally both.)
         .span3
-          5 Days
+          %img{ src: 'images/calendar.png' }
         .span3
           .circle
+            %img{ src: 'images/icon.prototype.png' }
           %h4 ...prototyped.
           %p Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.
 
       .row.why
         %p
-          %strong There's a reason we work in 5 day blocks.
+          %span.bold There's a reason we work in 5 day blocks.
           That's just enough time to make the most important feature (or 2) of your idea concrete. We take your idea (or problem, or market, or customer segment) and find the simplest, most direct way to answer one question:
-          %em should I keept going?
+          %em should I keep going?
 
       .row.examples
         .span3
@@ -51,7 +53,7 @@
             %li something else
 
       .row.contact-us
-        %h4 5 days. $10k.
+        %h3.bold 5 days. $10k.
         %p
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
         %a{ href: 'mailto:hello@fivedayprototype.com'}
