--- a/static/style.css
+++ b/static/style.css
@@ -1,23 +1,48 @@
+@font-face {
+  font-family: "proxima_nova_rgregular";
+  src: url("fonts/proximanova-regular-webfont.eot");
+  src: url("fonts/proximanova-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/proximanova-regular-webfont.woff") format("woff"), url("fonts/proximanova-regular-webfont.ttf") format("truetype"), url("fonts/proximanova-regular-webfont.svg#proxima_nova_rgregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: "proxima_nova_ltbold";
+  src: url("fonts/proximanova-semibold-webfont.eot");
+  src: url("fonts/proximanova-semibold-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/proximanova-semibold-webfont.woff") format("woff"), url("fonts/proximanova-semibold-webfont.ttf") format("truetype"), url("fonts/proximanova-semibold-webfont.svg#proxima_nova_ltbold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 body {
-  margin-bottom: 100px; }
+  margin-bottom: 100px;
+  font-family: "proxima_nova_rgregular", "proxima_nova_ltbold";
+  background: url("images/bg.png") repeat; }
+body > .container {
+  width: 820px;
+  background-color: white; }
+
+.bold {
+  font-family: "proxima_nova_ltbold"; }
 
 .page-header {
   text-align: center;
   border-bottom: none; }
 .page-header .hero-unit {
-  background-color: transparent;
-  padding: 20px; }
+  padding: 20px;
+  margin-bottom: 0;
+  background-color: transparent; }
+.page-header .hero-unit h3 {
+  line-height: 28px; }
 
 .row {
-  margin: 1px auto;
-  width: 720px;
+  width: 760px;
   padding: 30px;
+  margin: 1px auto;
   border: 1px solid #dee7f5;
   box-shadow: inset 0 0 5px 0 #dee7f5; }
 
-h4 {
-  text-align: center;
-  margin-bottom: 20px; }
+h3, h4 {
+  margin-bottom: 20px;
+  text-align: center; }
 
 .summary .span3 {
   text-align: center; }
@@ -25,17 +50,19 @@ h4 {
   margin: 20px auto;
   width: 120px;
   height: 120px;
-  background: #5888cd;
-  border-radius: 50%; }
+  border-radius: 50%;
+  background: #5888cd; }
+.summary .span3 img {
+  margin-top: 35px; }
 
 .examples {
   padding-top: 50px; }
 .examples .span3:first-child {
   margin-left: 80px; }
 .examples .span3 {
-  background-color: #dee7f5;
   padding: 20px 10px 20px 20px;
-  margin-left: 40px; }
+  margin-left: 40px;
+  background-color: #dee7f5; }
 
 .contact-us a div {
   padding: 10px 20px;
