--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -1,27 +1,54 @@
+@font-face
+  font-family: 'proxima_nova_rgregular'
+  src: url('fonts/proximanova-regular-webfont.eot')
+  src: url('fonts/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/proximanova-regular-webfont.woff') format('woff'), url('fonts/proximanova-regular-webfont.ttf') format('truetype'), url('fonts/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg')
+  font-weight: normal
+  font-style: normal
+
+@font-face
+  font-family: 'proxima_nova_ltbold'
+  src: url('fonts/proximanova-semibold-webfont.eot')
+  src: url('fonts/proximanova-semibold-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/proximanova-semibold-webfont.woff') format('woff'), url('fonts/proximanova-semibold-webfont.ttf') format('truetype'), url('fonts/proximanova-semibold-webfont.svg#proxima_nova_ltbold') format('svg')
+  font-weight: normal
+  font-style: normal
+
 $darkBlue: #5888CD
 $lightBlue: #DEE7F5
 
 body
   margin-bottom: 100px
+  font-family: 'proxima_nova_rgregular', 'proxima_nova_ltbold'
+  background: url('images/bg.png') repeat
+
+  &> .container
+    width: 820px
+    background-color: white
+
+.bold
+  font-family: 'proxima_nova_ltbold'
 
 .page-header
   text-align: center
   border-bottom: none
 
   .hero-unit
-    background-color: transparent
     padding: 20px
+    margin-bottom: 0
+    background-color: transparent
+
+    h3
+      line-height: 28px
 
 .row
-  margin: 1px auto
-  width: 720px
+  width: 760px
   padding: 30px
+  margin: 1px auto
   border: 1px solid $lightBlue
   box-shadow: inset 0 0 5px 0 $lightBlue
 
-h4
-  text-align: center
+h3, h4
   margin-bottom: 20px
+  text-align: center
 
 .summary
   .span3
@@ -31,8 +58,11 @@ h4
       margin: 20px auto
       width: 120px
       height: 120px
-      background: $darkBlue
       border-radius: 50%
+      background: $darkBlue
+
+    img
+      margin-top: 35px
 
 .examples
   padding-top: 50px
@@ -41,12 +71,11 @@ h4
     margin-left: 80px
 
   .span3
-    background-color: $lightBlue
     padding: 20px 10px 20px 20px
     margin-left: 40px
+    background-color: $lightBlue
 
 .contact-us
-
   a
     div
       padding: 10px 20px
