--- a/static/style.css
+++ b/static/style.css
@@ -15,53 +15,84 @@
 body {
   margin-bottom: 100px;
   font-family: "proxima_nova_rgregular", "proxima_nova_ltbold";
-  background: url("images/bg.png") repeat; }
+  background: url("images/bg.png") repeat top center; }
 body > .container {
-  width: 820px;
-  background-color: white; }
+  position: relative;
+  width: 746px; }
 
 .bold {
   font-family: "proxima_nova_ltbold"; }
 
 .page-header {
+  box-sizing: border-box;
+  height: 298px;
+  padding: 0;
+  padding-top: 65px;
+  margin: 0;
+  margin-bottom: 2px;
   text-align: center;
   border-bottom: none; }
 .page-header .hero-unit {
   padding: 20px;
-  margin-bottom: 0;
   background-color: transparent; }
-.page-header .hero-unit h3 {
-  line-height: 28px; }
+.page-header .hero-unit img {
+  margin-bottom: 10px; }
+.page-header .hero-unit h2 {
+  line-height: 32px; }
 
 .row {
-  width: 760px;
-  padding: 30px;
-  margin: 1px auto;
-  border: 1px solid #dee7f5;
-  box-shadow: inset 0 0 5px 0 #dee7f5; }
+  box-sizing: border-box;
+  height: 298px;
+  width: 746px;
+  padding: 10px 30px;
+  margin: 0px auto 2px auto;
+  background-color: white; }
+.row.double {
+  height: 296px; }
 
 h3, h4 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   text-align: center; }
 
-.summary .span3 {
+.arrow1 {
+  position: absolute;
+  top: 70px;
+  left: 230px; }
+
+.arrow2 {
+  position: absolute;
+  top: 70px;
+  left: 450px; }
+
+.line-down {
+  position: absolute;
+  left: 360px;
+  top: 154px; }
+
+.summary .third {
+  float: left;
+  width: 30%;
+  padding: 0 1.5%;
   text-align: center; }
-.summary .span3 .circle {
+.summary .third p {
+  text-align: left; }
+.summary .third .circle {
   margin: 20px auto;
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background: #5888cd; }
-.summary .span3 img {
-  margin-top: 35px; }
+.summary .third img {
+  margin-top: 27px; }
+
+.row.why {
+  height: 148px;
+  padding-top: 50px; }
 
 .examples {
   padding-top: 50px; }
-.examples .span3:first-child {
-  margin-left: 80px; }
 .examples .span3 {
   padding: 20px 10px 20px 20px;
-  margin-left: 40px;
   background-color: #dee7f5; }
 
 .contact-us a div {
