Adjust font size.

--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -9,14 +9,14 @@
       .container
         .hero-unit
           %img.logo{ src: 'images/logo.png' }
-          %h2 We get the ideas out of your head <br/> and into the world.
+          %h2 Get the ideas out of your head <br/> and into the world.
 
     .container
       .row.summary
         .third
           .circle
             %img{ src: 'images/icon.bulb.png' }
-          %h4 Your idea...
+          %h4.bold Your idea...
           %p
             You have an idea. Something that makes money or makes the world a better place. (Ideally both.)
         %img.arrow1{ src: 'images/bg.rarr.png' }
@@ -26,11 +26,11 @@
         .third
           .circle
             %img{ src: 'images/icon.prototype.png' }
-          %h4 ...prototyped.
+          %h4.bold ...prototyped.
           %p Your idea is in the world. It may be a wireframe, a working website, a landing page, paying customers, or something else.
         %img.line-down{ src: 'images/bg.line_down.png' }
 
-      .row.why
+      .row.why.large
         %p
           %span.bold There's a reason we work in 5 day blocks.
           That's just enough time to make the most important feature (or 2) of your idea concrete. We take your idea (or problem, or market, or customer segment) and find the simplest, most direct way to answer one question:
@@ -38,7 +38,7 @@
 
       .row.examples
         .span3.offset1
-          %h4 We do things like:
+          %h4.bold We do things like:
           %ul
             %li wireframes
             %li landing pages
@@ -47,7 +47,7 @@
             %li solution interviews
 
         .span3
-          %h4 To help you:
+          %h4.bold To help you:
           %ul
             %li understand your customers
             %li test markets
@@ -55,9 +55,9 @@
             %li something else
             %li prepare an investor pitch
 
-      .row.contact-us
+      .row.contact-us.large
         %h3.bold 5 days. $10k.
         %p
           We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate. When it's over, you'll have something something something close me. Please please close me.
-        %a{ href: 'mailto:hello@fivedayprototype.com'}
-          .span3 Get In Touch
+        .button-container
+          %a{ href: 'mailto:hello@fivedayprototype.com'} Get In Touch
