--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,10 @@ body > .container {
   position: relative;
   width: 746px; }
 
+.large {
+  font-size: 16px;
+  line-height: 28px; }
+
 .bold {
   font-family: "proxima_nova_ltbold"; }
 
@@ -51,8 +55,7 @@ body > .container {
   height: 296px; }
 
 h3, h4 {
-  margin-bottom: 10px;
-  text-align: center; }
+  margin-bottom: 10px; }
 
 .arrow1 {
   position: absolute;
@@ -87,7 +90,7 @@ h3, h4 {
 
 .row.why {
   height: 148px;
-  padding-top: 50px; }
+  padding-top: 35px; }
 
 .examples {
   padding-top: 50px; }
@@ -95,11 +98,15 @@ h3, h4 {
   padding: 20px 10px 20px 20px;
   background-color: #dee7f5; }
 
-.contact-us a div {
-  padding: 10px 20px;
-  margin: 30px 0 0 240px;
+.contact-us h3 {
+  text-align: center; }
+.contact-us .button-container {
+  margin-top: 50px;
+  text-align: center; }
+.contact-us .button-container a {
+  padding: 10px 100px;
   text-align: center;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 24px;
+  line-height: 28px;
   color: white;
   background-color: #5888cd; }
