--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -24,6 +24,10 @@ body
     position: relative
     width: 746px
 
+.large
+  font-size: 16px
+  line-height: 28px
+
 .bold
   font-family: 'proxima_nova_ltbold'
 
@@ -60,7 +64,6 @@ body
 
 h3, h4
   margin-bottom: 10px
-  text-align: center
 
 .arrow1
   position: absolute
@@ -99,7 +102,7 @@ h3, h4
 
 .row.why
   height: 148px
-  padding-top: 50px
+  padding-top: 35px
 
 .examples
   padding-top: 50px
@@ -109,12 +112,17 @@ h3, h4
     background-color: $lightBlue
 
 .contact-us
-  a
-    div
-      padding: 10px 20px
-      margin: 30px 0 0 240px
+  h3
+    text-align: center
+
+  .button-container
+    margin-top: 50px
+    text-align: center
+
+    a
+      padding: 10px 100px
       text-align: center
-      font-size: 20px
-      line-height: 24px
+      font-size: 24px
+      line-height: 28px
       color: white
       background-color: $darkBlue
