Another pass at copy.

--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -116,7 +116,7 @@ h3, h4
     text-align: center
 
   .button-container
-    margin-top: 50px
+    margin-top: 30px
     text-align: center
 
     a
@@ -126,3 +126,5 @@ h3, h4
       line-height: 28px
       color: white
       background-color: $darkBlue
+      text-decoration: none
+      cursor: hand
