--- a/static/style.css
+++ b/static/style.css
@@ -101,7 +101,7 @@ h3, h4 {
 .contact-us h3 {
   text-align: center; }
 .contact-us .button-container {
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center; }
 .contact-us .button-container a {
   padding: 10px 100px;
@@ -109,4 +109,6 @@ h3, h4 {
   font-size: 24px;
   line-height: 28px;
   color: white;
-  background-color: #5888cd; }
+  background-color: #5888cd;
+  text-decoration: none;
+  cursor: hand; }
