Add/update images, tweak styles

--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -34,6 +34,7 @@
         %p
           %span.bold There's a reason we work in 5 day blocks.
           That's just enough time to do one thing really well. And that's the goal of a new startup or product &mdash; to find one thing that customers will pay you for, or pay attention to.
+        %img.arrows-down{ src: 'images/bg.arrows_down.png' }
 
       .row.examples
         .span3.offset1
