--- a/stylesheets/style.sass
+++ b/stylesheets/style.sass
@@ -80,6 +80,10 @@ h3, h4
   left: 360px
   top: 154px
 
+.arrows-down
+  position: absolute
+  left: 200px
+
 .summary
   .third
     float: left
@@ -110,6 +114,9 @@ h3, h4
   .span3
     padding: 20px 10px 20px 20px
     background-color: $lightBlue
+
+  .offset1
+    margin-left: 80px
 
 .contact-us
   h3
