--- a/haml/index.html.haml
+++ b/haml/index.html.haml
@@ -38,11 +38,11 @@
 
       .row.examples
         .span3.offset1
-          %h4.bold We do things like:
+          %h4.bold We build Version 1:
           %ul
+            %li a working website
+            %li a landing page
             %li wireframes
-            %li landing pages
-            %li working websites
             %li customer interviews
 
         .span3
@@ -56,7 +56,7 @@
       .row.contact-us.large
         %h3.bold 5 days. $10k.
         %p
-          We make things simple. A 5 day prototype lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate your idea with potential customers. At the end, we'll help you outline your path toward profitability and success.
+          We make things simple. A 5 day session lasts 5 days and it costs $10,000. You'll work closely with us as we simplify, iterate, and validate your idea with potential customers. At the end, you'll be on your way toward profitability and success.
         %p
           Let's build something real.
         .button-container
